<resources>
    <string name="app_name">NotesApplication</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes...</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="add_image">Add Image</string>
    <string name="web_link">Web Link</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="type_note_here">Type Note Here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note ?</string>
</resources>