<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:id="@+id/layoutDeleteNoteContainer"
    android:background="@drawable/url_dialog_background">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_delete"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/deleteWarningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>

<!--    <EditText-->
<!--        android:id="@+id/inputUrl"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_35sdp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:layout_marginEnd="12dp"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:hint="@string/enter_url"-->
<!--        android:textColorHint="@color/colorWhite"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        android:background="@null"-->
<!--        android:inputType="textUri"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:importantForAutofill="no"-->
<!--        android:includeFontPadding="false"-->
<!--        android:gravity="center_vertical"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"-->
<!--        android:paddingStart="8dp"-->
<!--        android:paddingEnd="8dp"/>-->

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteWarningText"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/textCancelNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/deleteWarningText"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>