<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back_button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:paddingStart="20dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:paddingEnd="14dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/colorWhite"
                    android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/doneButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/done_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/saveNoteButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:padding="13dp"
                    app:tint="@color/colorBlack"
                    android:src="@drawable/ic_baseline_done_24"
                    android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/note_title"
                android:textColorHint="@color/colorWhite"
                android:background="@null"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/backButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:paddingEnd="10dp"
                android:layout_marginStart="15dp"/>
            
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/noteTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:includeFontPadding="false"
                android:textSize="14sp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="2dp"
                android:paddingBottom="6dp"
                app:layout_constraintTop_toBottomOf="@id/noteTitle"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:id="@+id/noteSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_subtitle"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp"
                android:background="@null"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/subtitleIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"/>
            
            <View
                android:id="@+id/subtitleIndicator"
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/noteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/noteSubtitle"
                android:background="@drawable/subtitle_background"/>

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/noteSubtitle"/>
            
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:src="@drawable/ic_delete"
                app:tint="@color/colorWhite"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@+id/imageNote"/>

            <LinearLayout
                android:id="@+id/textWebLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/imageNote">

                <TextView
                    android:id="@+id/textWebUrl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_15sdp"/>

                <ImageView
                    android:id="@+id/imageRemoveWebLink"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorRed"/>

            </LinearLayout>

            <EditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:inputType="textMultiLine"
                android:hint="@string/type_note_here"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:background="@null"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="@dimen/_150sdp"
                android:gravity="top"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/textWebLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_note_color"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>